--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,24 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScoreActivity">
+    tools:context=".SettingsActivity">
 
     <TextView
-        android:id="@+id/scoreTitleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_above="@android:id/list"
-        android:layout_marginBottom="20sp"
-        android:textSize="30sp"
-        android:text="SCORES"
-        />
-
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="500sp"
-        android:layout_height="200sp"
-        android:layout_centerInParent="true"
+        android:layout_toRightOf="@+id/backBtn"
+        android:textSize="40sp"
+        android:text="Settings"
+        android:layout_margin="10sp"
         />
 
     <ImageView
