--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_green">#61B15A</color>
+    <color name="green">#ADCE74</color>
+    <color name="yellow">#FFF76A</color>
+    <color name="pink">#FFCE89</color>
 </resources>
