--- a/app/src/main/res/layout/activity_game_board.xml
+++ b/app/src/main/res/layout/activity_game_board.xml
@@ -5,7 +5,7 @@
     style="@style/Theme.Serpento"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GameBoardActivity">
+    tools:context=".view.GameBoardActivity">
 
     <ImageView
         android:layout_width="match_parent"
