--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -24,4 +24,26 @@
         android:id="@+id/backBtn"
         />
 
+    <Switch
+        android:id="@+id/leftSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/backBtn"
+        android:layout_margin="40sp"
+        android:text="Left-handed "
+        android:textSize="20sp"
+        />
+
+    <Button
+        android:id="@+id/applyBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="40sp"
+        android:text="APPLY&#10;CHANGES"
+        android:background="@color/green"
+        android:onClick="applyChanges"
+        />
+
 </RelativeLayout>
