--- a/app/src/main/res/layout/activity_game_board_left.xml
+++ b/app/src/main/res/layout/activity_game_board_left.xml
@@ -88,7 +88,7 @@
         android:layout_marginTop="10sp"
         android:layout_marginLeft="20sp"
         android:clickable="false"
-        android:text="Score: "
+        android:text="@string/scoreGame"
         android:textColor="@color/black"
         android:textSize="30sp" />
 
