--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:onClick="playHandler"
-        android:text="Play"
+        android:text="@string/play"
         android:textColor="#fff"
         android:textSize="48sp" />
 
