--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -14,7 +14,7 @@
         android:layout_above="@android:id/list"
         android:layout_marginBottom="20sp"
         android:textSize="30sp"
-        android:text="SCORES"
+        android:text="@string/scoresTitle"
         />
 
     <ListView
