Había roto lo de los zurdos. Arreglado.

--- a/app/src/main/res/layout/activity_game_board_left.xml
+++ b/app/src/main/res/layout/activity_game_board_left.xml
@@ -16,6 +16,13 @@
         android:id="@+id/gameBoardImgGreen"
         />
 
+    <SurfaceView
+        android:id="@+id/boardSurface"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_toRightOf="@id/gameBoardImgWhite"
+        android:scaleType="fitXY" />
+
     <ImageView
         android:layout_width="260sp"
         android:layout_height="match_parent"
