Una pila cosas, ustede probarlo.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
-        android:src="@drawable/ffce89_background"
+        android:src="@drawable/serpento_main"
         />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/playBtn"
-        android:layout_centerHorizontal="true"
-        android:text="SERPENTO"
-        android:textColor="#fff"
-        android:textSize="64sp" />
 
     <TextView
         android:id="@+id/playBtn"
