--- a/app/src/main/res/layout/activity_difficulty_selection.xml
+++ b/app/src/main/res/layout/activity_difficulty_selection.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.MapSelectionActivity">
+    tools:context=".view.DifficultySelectionActivity">
 
     <TextView
         android:id="@+id/mapTitleText"
